# ot-literature

./: README.md  dev.ipynb  pyproject.toml
src/literature/: __init__.py
src/literature/common/: schemas.py  session.py
src/literature/dataset/: __init__,py  dataset.py  entity.py  match.py  publication.py
src/literature/datasource/: __init__.py
src/literature/datasource/epmc/: __init__.py  publication.py  publication_id_lut.py
src/literature/datasource/open_targets/: __init__.py  disease.py  drug.py  target.py
src/literature/method/: __init__.py  nlp_pipeline.py
src/literature/method/ontoma/: __init__.py  index_parsers.py  nlp_pipeline.py  ontoma.py
src/literature/schemas/: entity.json  match.json  publication.json
