[project]
name = "ot-literature"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.5",
    "pyspark==3.3.4",
    "pytest>=8.3.5",
    "spark-nlp>=5.5.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
